WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309379
[iOS] Take an assertion when clearing Now Playing suppression
https://bugs.webkit.org/show_bug.cgi?id=309379
Summary
[iOS] Take an assertion when clearing Now Playing suppression
Andy Estes
Reported
2026-03-06 14:32:30 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2026-03-06 14:32:31 PST
<
rdar://problem/170570469
>
Andy Estes
Comment 2
2026-03-06 14:33:42 PST
Pull request:
https://github.com/WebKit/WebKit/pull/60092
EWS
Comment 3
2026-03-06 17:01:57 PST
Committed
308835@main
(b1bee7e80e08): <
https://commits.webkit.org/308835@main
> Reviewed commits have been landed. Closing PR #60092 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug