[iOS] Take an assertion when clearing Now Playing suppression https://bugs.webkit.org/show_bug.cgi?id=309379 rdar://170570469

Reviewed by Eric Carlson.

Updated MediaSessionManagerCocoa::updateNowPlayingSuppression to take an assertion necessary for
clearing Now Playing suppression.

* Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::updateNowPlayingSuppression):
* Source/WebCore/platform/mac/MediaRemoteSoftLink.h:
* Source/WebCore/platform/mac/MediaRemoteSoftLink.mm:

Canonical link: https://commits.webkit.org/308835@main